ASC Prod BAckup/ASC Prod/force-app/main/default/objects/B2B_Google_Merchant_Center__c/B2B_Google_Merchant_Center__c.object-meta.xml
<CustomObject>
    <description>This is used to track GMC conversions for ascensus commerce store.</description>
    <label>B2B Google Merchant Center</label>
    <nameField>
        <displayFormat>GMC-{00000}</displayFormat>
        <label>B2B Google Merchant Center Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>B2B Google Merchant Centers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>