ASC Prod BAckup/ASC Prod/force-app/main/default/objects/B2B_Google_Merchant_Center__c/fields/B2B_Contact__c.field-meta.xml
<CustomField>
    <fullName>B2B_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>B2B Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>B2B Google Merchant Centers</relationshipLabel>
    <relationshipName>B2B_Google_Merchant_Centers</relationshipName>
    <type>Lookup</type>
</CustomField>