ASC Prod BAckup/ASC Prod/force-app/main/default/objects/B2B_Google_Merchant_Center__c/fields/B2B_Key__c.field-meta.xml
<CustomField>
    <fullName>B2B_Key__c</fullName>
    <label>B2B Key</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>